--- a/templates/index.html
+++ b/templates/index.html
@@ -24,8 +24,6 @@
     />
     <meta name="keywords" content="Buy Email Address List, Buy Email List, Buy Targeted Email Lists, USA Email Lueads, Business to Business Database" />
     <meta name="robots" content="index, follow" />
-
-
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.spanglobalservices.com/">
     <meta property="og:title" content="Marketing Data Intelligence to Fuel Growth - Span Global Services">
@@ -41,7 +39,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet" disabled>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet" disabled>
     <link href="/static/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="all">
-    <link href="assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" defer>
+    <link href="/static/assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" defer>
     <link href="/static/assets/vendor/ionicons/css/ionicons.min.css" rel="stylesheet" defer>
     <link href="/static/assets/vendor/animate.css/animate.min.css" rel="stylesheet" media="all">
     <link href="/static/assets/vendor/venobox/venobox.css" rel="stylesheet" media="all">
@@ -54,7 +52,8 @@
     </script>
 </head>
 
-<body onload="myFunction()"> <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P7R349S" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<body onload="myFunction()"> 
+    
     <style>
         .crypto-head {
             background-color: green;
@@ -197,10 +196,10 @@
             <div class="clearfix"></div>
         </header>
     </div>
-    <div class="sticky-container">
+    <!-- <div class="sticky-container">
         <ul class="sticky">
             <li> <i class="fa fa-phone hoverobj"></i>
-                <div class="right-share"> <a href="tel:8777550023" target="_blank">307-213-7098 </a>
+                <div class="right-share"> 
                     <div class="triangle-right"></div>
                 </div>
             </li>
@@ -210,7 +209,7 @@
                 </div>
             </li>
         </ul>
-    </div>
+    </div> -->
     <style>
         .nav-menu .high-text a {
             color: #036532;
@@ -492,7 +491,9 @@
                 <div class="row">
                     <div class="col-lg-8 ">
                         <div class="wow bounceInUp pt-5 video-bg-home centeralign">
-                            <div class="video-main video-btn border-style green mb-46 centeralign"> <a href="javascript:void();" class="popup-youtube popup-videos" youtubeid="3ZDV4KjPSN4?autoplay=1;rel=0&amp;controls=1&amp;showinfo=0"> <i class="fa fa-play"></i> </a> </div>
+                            <div class="video-main video-btn border-style green mb-46 centeralign">
+                                 <!-- <a href="javascript:void();" class="popup-youtube popup-videos" youtubeid="3ZDV4KjPSN4?autoplay=1;rel=0&amp;controls=1&amp;showinfo=0"> <i class="fa fa-play"></i> </a>  -->
+                                </div>
                             <div class="play-after-con pb-5">
                                 <h2>Find the right audience<br /> for your business</h2>
                             </div>
@@ -741,10 +742,12 @@
                     </div>
                     <div class="clearfix"></div>
                     <div class="col-lg-4 col-md-4 mt-3 mb-0 footer-contact"> <strong class="h4">United States</strong>
-                        <p>1309 COFFEEN AVENUE STE 1200 SHERIDAN,  </br> WY 82801<br /> <strong>Email :</strong><a href="mailto:info@affluencebusiness.com">info@affluencebusiness.com</a><br /> <strong>Phone :</strong><a href="tel:8777550023">307-213-7098</a>                            </p>
+                        <p>1309 COFFEEN AVENUE STE 1200 SHERIDAN,  </br> WY 82801<br /> <strong>Email :</strong><a href="mailto:info@affluencebusiness.com">info@affluencebusiness.com</a><br /> <strong>Phone :</strong>
                     </div>
                     <div class="col-lg-4 col-md-4 mt-3 footer-contact"> <strong class="h4"></strong>
-                        <p> </br><br /> <strong></strong><a href="tel:8777550023"></a> </p>
+                        <!-- <p> </br><br /> <strong></strong>
+                            <a href="tel:8777550023"></a>
+                         </p> -->
                     </div>
                     <div class="col-lg-4 col-md-4 mt-4 f-social"> <a href="/" alt="Span Global Services"><img src="/static/assets/img/new-affluence-logo.png" class="respo-img" alt="Span Global Services Logo"></a> </div>
                     <div class="col-lg-8 col-md-8 mt-4 footer-contact">
@@ -896,7 +899,11 @@
     </div>
 
 
-<a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
+<a href="#" class="back-to-top">
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="#fff" class="bi bi-arrow-up-circle" viewBox="0 0 16 16">
+        <path fill-rule="evenodd" d="M1 8a7 7 0 1 0 14 0A7 7 0 0 0 1 8zm15 0A8 8 0 1 1 0 8a8 8 0 0 1 16 0zm-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V11.5z"/>
+      </svg>
+</a>
     <script src="/static/assets/vendor/jquery/jquery.min.js"></script>
     <script src="/static/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="/static/assets/vendor/jquery.easing/jquery.easing.min.js"></script>
@@ -962,24 +969,7 @@
         });
     </script>
 
-    <script type="application/ld+json">
-        {
-            "@context": "https://schema.org",
-            "@type": "Organization",
-            "name": "Span Global Services",
-            "url": "/",
-            "logo": "/static/assets/img/new-affluence-logo.png",
-            "contactPoint": {
-                "@type": "ContactPoint",
-                "telephone": "+1 307-213-7098",
-                "contactType": "customer service",
-                "contactOption": "TollFree",
-                "areaServed": "US",
-                "availableLanguage": "en"
-            },
-            "sameAs": ["https://twitter.com/spanglobal", "https://www.youtube.com/user/SpanGlobalServices", "https://www.instagram.com/spanglobalservices/", "https://www.linkedin.com/company/span-global-services", "https://www.facebook.com/spanglobalservices"]
-        }
-    </script>
+    
 
 </body>
 
