--- a/templates/data-append/b2b-email-appending.html
+++ b/templates/data-append/b2b-email-appending.html
@@ -134,13 +134,13 @@
                                 </a>
                             </div>
                             <div class="col-lg-4 mb-4">
-                                <a href="https://www.spanglobalservices.com/data-append/social-media-profile-appending" title="Social Media Profile Appending">
-                                    <div class="icon"><img src="https://www.spanglobalservices.com/assets/img/social-profile-appending-thumb.jpg" alt="Social Media Profile Appending" class="respo-img" /> </div>
+                                <a href="/social-media-profile-appending/" title="Social Media Profile Appending">
+                                    <div class="icon"><img src="/static/assets/img/social-profile-appending-thumb.jpg" alt="Social Media Profile Appending" class="respo-img" /> </div>
                                     <p class="description">Social Media<br/>Profile Appending</p>
                                 </a>
                             </div>
                         </div>
-                        <div class="mb-4 mt-4"> <a href="https://www.spanglobalservices.com/contact-us" class="green-btn circle-fa">TRY OUR B2B APPENDING SERVICE &nbsp; <i class="fa icon ion-android-arrow-forward"></i></a> </div>
+                        <div class="mb-4 mt-4"> <a href="/contact-us/" class="green-btn circle-fa">TRY OUR B2B APPENDING SERVICE &nbsp; <i class="fa icon ion-android-arrow-forward"></i></a> </div>
                         <p>B2B marketing requires a different sales and promotional approach in order to achieve the desired business returns.</p>
                     </div>
                     <div class="col-lg-5 mb-4 wow fadeInRight">
@@ -149,7 +149,7 @@
                                 <h4>Free Append Test</h4>
                                 </br>
                                 <div class="form">
-                                    <form name="f20" id="contact-form" action="https://www.spanglobalservices.com/scripts/append-mailer" method="post" onSubmit="return dataappendvalidation()" enctype="multipart/form-data"> <input type="hidden" name="returnURL" value="https://www.spanglobalservices.com/thanks"><input name="title" type="hidden" value="Contact Request from Span Global Services">
+                                    <form name="f20" id="contact-form" action="/append-maile/r" method="post" onSubmit="return dataappendvalidation()" enctype="multipart/form-data"> <input type="hidden" name="returnURL" value="https://www.spanglobalservices.com/thanks"><input name="title" type="hidden" value="Contact Request from Span Global Services">
                                         <div class=" form-row">
                                             <div class="col-lg-6 form-group">
                                                 <div class="input-container"> <input type="text" name="fname" class="form-control" id="fname" placeholder="First Name*"> <i class="fa fa-user icon"></i> </div>
@@ -194,7 +194,7 @@
         <section class="lighter-grey">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6 wow fadeInRight centeralign"> <img src="https://www.spanglobalservices.com/assets/img/b2c-email-append-sub.jpg" alt="B2C Email Appending" class="full-img" /> </div>
+                    <div class="col-lg-6 wow fadeInRight centeralign"> <img src="/static/assets/img/b2c-email-append-sub.jpg" alt="B2C Email Appending" class="full-img" /> </div>
                     <div class="col-lg-6 mb-4 wow fadeInLeft">
                         <h2 class="subhead-small-blk">Some of the most prominent challenges faced in b2b marketing are:</h2>
                         <div class="space-list">
