--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
     <meta property="twitter:title" content="Marketing Data Intelligence to Fuel Growth - Span Global Services">
     <meta property="twitter:description" content="Span Global Services is the industry leader for business mailing lists and sales leads. Get access to 25+ million businesses data across the world.">
     <meta property="twitter:image" content="/static/assets/img/new-affluence-logo.png">
-    <link href="/static/assets/img/favicon.png" rel="icon">
+    <link href="/static/assets/img/icon/logo-icon.png" rel="icon">
     <link href="/static/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap" rel="stylesheet" disabled>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet" disabled>
@@ -667,39 +667,39 @@
                 </div>
             </div>
         </section>
-        <section id="insight-slide" class="section-bg wow fadeInUp">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12 mb-4 wow fadeInLeft">
-                        <div class="col-lg-12">
-                            <h2 class="subhead-bold mb-2">Marketing Insights</h2>
-                        </div>
-                    </div>
-                </div>
-                <div class="owl-carousel services-carousel">
-                    <div class="item"> <a href="/blog/benefits-of-website-personalization-that-can-be-the-game-changer-for-b2b-industry/"> <img src="/blog/wp-content/uploads/2023/06/5-benefits-of-website-personalization.jpg" class="respo-img" alt="5 Benefits of Website Personalization That Can Be the Game Changer for B2B Industry" /> <h2 class="mt-3 mb-3"><a href="/blog/benefits-of-website-personalization-that-can-be-the-game-changer-for-b2b-industry/">5 Benefits of Website Personalization That Can Be the Game Changer for B2B Industry</a></h2>
-                        <p>"Tue, 27 Jun 2023"</p>
-                        </a>
-                    </div>
-                    <div class="item"> <a href="/blog/leveraging-hr-executives-mailing-list-for-your-hrm-business-solutions/"> <img src="/blog/wp-content/uploads/2023/06/leveraging-hr-executives-mailing-list-for-your-hrm-business-solutions.jpg" class="respo-img" alt="Leveraging HR Executive’s Mailing List for Your HRM Business Solutions" /> <h2 class="mt-3 mb-3"><a href="/blog/leveraging-hr-executives-mailing-list-for-your-hrm-business-solutions/">Leveraging HR Executive’s Mailing List for Your HRM Business Solutions</a></h2>
-                        <p>"Tue, 20 Jun 2023"</p>
-                        </a>
-                    </div>
-                    <div class="item"> <a href="/blog/benefits-of-data-cleansing-services-for-your-business/"> <img src="/blog/wp-content/uploads/2023/06/understanding-the-benefits-of-data-cleansing-services-for-your-business.jpg" class="respo-img" alt="Understanding the Benefits of Data Cleansing Services for Your Business" /> <h2 class="mt-3 mb-3"><a href="/blog/benefits-of-data-cleansing-services-for-your-business/">Understanding the Benefits of Data Cleansing Services for Your Business</a></h2>
-                        <p>"Tue, 13 Jun 2023"</p>
-                        </a>
-                    </div>
-                    <div class="item"> <a href="/blog/role-of-account-based-marketing-in-b2b-lead-generation/"> <img src="/blog/wp-content/uploads/2023/06/role-of-account-based-marketing-in-b2b-lead-generation.jpg" class="respo-img" alt="The Role of Account Based Marketing in B2B Lead Generation" /> <h2 class="mt-3 mb-3"><a href="/blog/role-of-account-based-marketing-in-b2b-lead-generation/">The Role of Account Based Marketing in B2B Lead Generation</a></h2>
-                        <p>"Tue, 06 Jun 2023"</p>
-                        </a>
-                    </div>
-                    <div class="item"> <a href="/blog/future-of-ai-in-customer-service-an-analysis-for-businesses/"> <img src="/blog/wp-content/uploads/2023/05/the-future-of-ai-in-customer-service.jpg" class="respo-img" alt="Future of AI in Customer Service – An Analysis for Businesses" /> <h2 class="mt-3 mb-3"><a href="/blog/future-of-ai-in-customer-service-an-analysis-for-businesses/">Future of AI in Customer Service – An Analysis for Businesses</a></h2>
-                        <p>"Tue, 30 May 2023"</p>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </section>
+<!--        <section id="insight-slide" class="section-bg wow fadeInUp">-->
+<!--            <div class="container">-->
+<!--                <div class="row">-->
+<!--                    <div class="col-lg-12 mb-4 wow fadeInLeft">-->
+<!--                        <div class="col-lg-12">-->
+<!--                            <h2 class="subhead-bold mb-2">Marketing Insights</h2>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="owl-carousel services-carousel">-->
+<!--                    <div class="item"> <a href="/blog/benefits-of-website-personalization-that-can-be-the-game-changer-for-b2b-industry/"> <img src="/blog/wp-content/uploads/2023/06/5-benefits-of-website-personalization.jpg" class="respo-img" alt="5 Benefits of Website Personalization That Can Be the Game Changer for B2B Industry" /> <h2 class="mt-3 mb-3"><a href="/blog/benefits-of-website-personalization-that-can-be-the-game-changer-for-b2b-industry/">5 Benefits of Website Personalization That Can Be the Game Changer for B2B Industry</a></h2>-->
+<!--                        <p>"Tue, 27 Jun 2023"</p>-->
+<!--                        </a>-->
+<!--                    </div>-->
+<!--                    <div class="item"> <a href="/blog/leveraging-hr-executives-mailing-list-for-your-hrm-business-solutions/"> <img src="/blog/wp-content/uploads/2023/06/leveraging-hr-executives-mailing-list-for-your-hrm-business-solutions.jpg" class="respo-img" alt="Leveraging HR Executive’s Mailing List for Your HRM Business Solutions" /> <h2 class="mt-3 mb-3"><a href="/blog/leveraging-hr-executives-mailing-list-for-your-hrm-business-solutions/">Leveraging HR Executive’s Mailing List for Your HRM Business Solutions</a></h2>-->
+<!--                        <p>"Tue, 20 Jun 2023"</p>-->
+<!--                        </a>-->
+<!--                    </div>-->
+<!--                    <div class="item"> <a href="/blog/benefits-of-data-cleansing-services-for-your-business/"> <img src="/blog/wp-content/uploads/2023/06/understanding-the-benefits-of-data-cleansing-services-for-your-business.jpg" class="respo-img" alt="Understanding the Benefits of Data Cleansing Services for Your Business" /> <h2 class="mt-3 mb-3"><a href="/blog/benefits-of-data-cleansing-services-for-your-business/">Understanding the Benefits of Data Cleansing Services for Your Business</a></h2>-->
+<!--                        <p>"Tue, 13 Jun 2023"</p>-->
+<!--                        </a>-->
+<!--                    </div>-->
+<!--                    <div class="item"> <a href="/blog/role-of-account-based-marketing-in-b2b-lead-generation/"> <img src="/blog/wp-content/uploads/2023/06/role-of-account-based-marketing-in-b2b-lead-generation.jpg" class="respo-img" alt="The Role of Account Based Marketing in B2B Lead Generation" /> <h2 class="mt-3 mb-3"><a href="/blog/role-of-account-based-marketing-in-b2b-lead-generation/">The Role of Account Based Marketing in B2B Lead Generation</a></h2>-->
+<!--                        <p>"Tue, 06 Jun 2023"</p>-->
+<!--                        </a>-->
+<!--                    </div>-->
+<!--                    <div class="item"> <a href="/blog/future-of-ai-in-customer-service-an-analysis-for-businesses/"> <img src="/blog/wp-content/uploads/2023/05/the-future-of-ai-in-customer-service.jpg" class="respo-img" alt="Future of AI in Customer Service – An Analysis for Businesses" /> <h2 class="mt-3 mb-3"><a href="/blog/future-of-ai-in-customer-service-an-analysis-for-businesses/">Future of AI in Customer Service – An Analysis for Businesses</a></h2>-->
+<!--                        <p>"Tue, 30 May 2023"</p>-->
+<!--                        </a>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </section>-->
         <script>
             function intentPopupClose(event) {
                 intentPopupHidden = document.getElementById("intentPopupHidden").value = '1';
@@ -802,7 +802,7 @@
                                 type="hidden" value="Web Site Lead" />
                             <div class="form-group mt-4"><button type="submit" class="circle-fa">SUBMIT &nbsp; <i class="fa icon ion-android-arrow-forward"></i></button></div>
                         </form>
-                        <div class="text-center"> <a href="/privacy">"Your privacy is important to us"</a> </div>
+                        <div class="text-center"> <a href="/privacy/">"Your privacy is important to us"</a> </div>
                     </div>
                 </div>
             </div>
@@ -891,7 +891,7 @@
                                 type="hidden" value="Web Site Lead" />
                             <div class="form-group mt-4"><button type="submit" class="circle-fa">Connect Now &nbsp; <i class="fa icon ion-android-arrow-forward"></i></button></div>
                         </form>
-                        <div class="text-center"> <a href="/privacy">"Your privacy is important to us"</a> </div>
+                        <div class="text-center"> <a href="/privacy/">"Your privacy is important to us"</a> </div>
                     </div>
                 </div>
             </div>
