--- a/templates/total-addressable-market.html
+++ b/templates/total-addressable-market.html
@@ -53,21 +53,21 @@
             <div class="col-lg-6 mb-3 wow fadeInLeft">
               <div class="lgreen-br-box pos-rel pad-right-70">
                 <p class="mb-0">You have scoured the web to find your most prospective buyers.</p>
-                <img src="https://www.spanglobalservices.com/assets/img/perspective-thumb.png"
+                <img src="/static/assets/img/perspective-thumb.png"
                   alt="Most Prospective Buyers" class="respo-img pos-bot-right mb-3" />
               </div>
             </div>
             <div class="col-lg-6 mb-3 wow fadeInLeft">
               <div class="lgreen-br-box pos-rel pad-right-70">
                 <p class="mb-0">You are yet able to reach only a small proportion of the target market.</p>
-                <img src="https://www.spanglobalservices.com/assets/img/small-proportion-thumb.png"
+                <img src="/static/assets/img/small-proportion-thumb.png"
                   alt="Small Proportion of the Target Market" class="respo-img pos-bot-right mb-3" />
               </div>
             </div>
             <div class="col-lg-6 mb-3 wow fadeInLeft">
               <div class="lgreen-br-box pos-rel pad-right-70">
                 <p class="mb-0">There are many potential customers whom you are missing out on due to lead leakage.</p>
-                <img src="https://www.spanglobalservices.com/assets/img/potential-customers-thumb.png"
+                <img src="/static/assets/img/potential-customers-thumb.png"
                   alt="Potential Customers" class="respo-img pos-bot-right mb-3" />
               </div>
             </div>
@@ -75,7 +75,7 @@
               <div class="lgreen-br-box pos-rel pad-right-70">
                 <p class="mb-0">There are existing customers whom you are unable to re-connect and re-activate due to
                   bad data.</p>
-                <img src="https://www.spanglobalservices.com/assets/img/re-activate-thumb.png"
+                <img src="/static/assets/img/re-activate-thumb.png"
                   alt="Re-connect and Re-activate" class="respo-img pos-bot-right mb-3" />
               </div>
             </div>
@@ -92,7 +92,7 @@
 
         </div>
         <div class="col-lg-6 mb-4 wow fadeInRight">
-          <img src="https://www.spanglobalservices.com/assets/img/big-budget-thumb.jpg" alt="Total Addressable Market"
+          <img src="/static/assets/img/big-budget-thumb.jpg" alt="Total Addressable Market"
             class="respo-img" />
         </div>
       </div>
@@ -102,7 +102,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 mb-4 mt--80 wow fadeInLeft">
-          <img src="https://www.spanglobalservices.com/assets/img/identify-target-market.jpg"
+          <img src="/static/assets/img/identify-target-market.jpg"
             alt="How can our data experts help?" class="respo-img" />
 
         </div>
@@ -114,28 +114,28 @@
           <h4 class="shead-smblk">How can our data experts help?</h4>
 
           <div class="col-lg-12 mb-3 marketing-sm-box">
-            <div class="icon"><img src="https://www.spanglobalservices.com/assets/img/calculator-thumb.png"
+            <div class="icon"><img src="/static/assets/img/calculator-thumb.png"
                 alt="Calculate your market reach" class="respo-img" /></div>
             <p class="description">Calculate your market reach before making big-budget B2B marketing plans.</p>
             <div class="clearfix"> </div>
           </div>
           <div class="clearfix"> </div>
           <div class="col-lg-12 mb-3  marketing-sm-box">
-            <div class="icon"><img src="https://www.spanglobalservices.com/assets/img/pre-segmented-thumb.png"
+            <div class="icon"><img src="/static/assets/img/pre-segmented-thumb.png"
                 alt="pre-segmented lead data" class="respo-img" /></div>
             <p class="description">Probe if you can find pre-segmented lead data that are waiting to be tapped.</p>
             <div class="clearfix"> </div>
           </div>
           <div class="clearfix"> </div>
           <div class="col-lg-12 mb-3  marketing-sm-box">
-            <div class="icon"><img src="https://www.spanglobalservices.com/assets/img/buying-behaviour-thumb.png"
+            <div class="icon"><img src="/static/assets/img/buying-behaviour-thumb.png"
                 alt="buying behavior" class="respo-img" /></div>
             <p class="description">Find out about the trends and buying behavior of your target audience. </p>
             <div class="clearfix"> </div>
           </div>
           <div class="clearfix"> </div>
           <div class="col-lg-12 mb-3  marketing-sm-box">
-            <div class="icon"><img src="https://www.spanglobalservices.com/assets/img/prospective-customers-thumb.png"
+            <div class="icon"><img src="/static/assets/img/prospective-customers-thumb.png"
                 alt="prospective customers" class="respo-img" /></div>
             <p class="description">Know if your most prospective customers are eager to hear from you.</p>
             <div class="clearfix"> </div>
@@ -161,13 +161,13 @@
             <h2 class="bhead-blk mb-4">Thinking of an Outbound or Inbound Sales Plan?</h2>
             <h4 class="normal-hblk pb-4">Stop running the race blindfolded without<br />measuring your total buyer
               universe.</h4>
-            <div class="mb-2 mt-4"> <a href="https://www.spanglobalservices.com/connect-with-us"
+            <div class="mb-2 mt-4"> <a href="/contact-us/"
                 class="green-btn circle-fa">Connect With US! &nbsp; <i
                   class="fa icon ion-android-arrow-forward"></i></a> </div>
           </div>
         </div>
         <div class="col-lg-6 mb-4 wow fadeInRight pad-none">
-          <img src="https://www.spanglobalservices.com/assets/img/most-valuable-bg.jpg"
+          <img src="/static/assets/img/most-valuable-bg.jpg"
             alt="Outbound or Inbound Sales Plan" class="full-img" />
         </div>
       </div>
@@ -192,7 +192,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 mb-4 wow fadeInLeft">
-          <img src="https://www.spanglobalservices.com/assets/img/identify-convert-bg.jpg"
+          <img src="/static/assets/img/identify-convert-bg.jpg"
             alt="See your Marketing Pursuits Take-Off!" class="respo-img" />
         </div>
         <div class="col-lg-6 mb-4 wow fadeInRight">
@@ -201,14 +201,14 @@
           <h4 class="normal-hblk">Reach out to the right audiences where they exist and grow your footprint at an
             exponentially good pace.</h4>
           <div class="col-lg-12 mb-3 mt-5 pt-5 br-grey-top value-sm-box">
-            <div class="icon"><img src="https://www.spanglobalservices.com/assets/img/total-buyer-icon.png"
+            <div class="icon"><img src="/static/assets/img/total-buyer-icon.png"
                 alt="Calculate Total Buyey Universe" class="respo-img" /></div>
             <p class="description">Calculate the total buyer universe of any target market and then proceed to your next
               step.</p>
             <div class="clearfix"> </div>
           </div>
           <div class="col-lg-12 mb-3 value-sm-box">
-            <div class="icon"><img src="https://www.spanglobalservices.com/assets/img/expert-advise-icon.png"
+            <div class="icon"><img src="/static/assets/img/expert-advise-icon.png"
                 alt="Seek our Expert Advice" class="respo-img" /></div>
             <p class="description">Seek our expert advice to launch lead generation campaigns for every potential
               segment.</p>
@@ -216,7 +216,7 @@
           </div>
 
           <div class="col-lg-12 mb-3 value-sm-box">
-            <div class="icon"><img src="https://www.spanglobalservices.com/assets/img/reach-sales-icon.png"
+            <div class="icon"><img src="/static/assets/img/reach-sales-icon.png"
                 alt="Launch multi-channel Campaigns" class="respo-img" /></div>
             <p class="description">Launch multi-channel campaigns to reach sales targets and strategic business
               objectives.</p>
@@ -224,7 +224,7 @@
           </div>
 
           <div class="col-lg-12 mb-3 value-sm-box">
-            <div class="icon"><img src="https://www.spanglobalservices.com/assets/img/hyper-personalized-icon.png"
+            <div class="icon"><img src="/static/assets/img/hyper-personalized-icon.png"
                 alt="Reach Every Segment" class="respo-img" /></div>
             <p class="description">Reach every segment with unique hyper-personalized messages to drive higher
               engagement.</p>
@@ -284,7 +284,7 @@
             </div>
             <div class="col-lg-4 mt-3 wow fadeInRight">
               <div class="">
-                <a href="https://www.spanglobalservices.com/connect-with-us" class="green-btn circle-fa">Talk To Us
+                <a href="/contact-us/" class="green-btn circle-fa">Talk To Us
                   &nbsp; <i class="fa icon ion-android-arrow-forward"></i></a>
               </div>
 
